# rust-ipfs-cids-owners

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cids_owners.rs  docker-compose.yaml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  cmd.rs  error.rs  ethereum.rs  ipfs.rs  main.rs
contracts-bindings/: Cargo.toml  build.rs  package-lock.json
contracts-bindings/contracts/: CIDsOwners.json
contracts-bindings/src/: cids_owners.rs  lib.rs
contracts-bindings/tests/: contract_test.rs
smart-contracts/: package-lock.json  package.json
smart-contracts/contracts/: CIDsOWners.sol
smart-contracts/migrations/: 1_CIDsOwners.js
tests/: docker-compose.yaml
tests/smart-contract/: package-lock.json  truffle-config.js
tests/smart-contract/contracts/: IPFSUplodadedFiles.sol
tests/smart-contract/migrations/: 1_IPFSUploadedFiles_migration.js
