[package]
name = "ipfs-cids-owners-cli"
version = "0.0.1"
authors = ["Ivan Fraixedes <ivan@fraixed.es>"]
edition = "2021"
description = "Command-line tool for uploading a file to IPFS and stores the CID in a smart contract, built as an example"
license = "MIT"
repository = "https://github.com/ifraixedes/rust-ipfs-cids-owners"
keywords = ["ethereum", "ipfs", "example"]

[dependencies]
async-fs = "1.6.0"
ethers = "1.0.2"
http = "0.2.8"
ipfs-api-backend-hyper = "0.6.0"
ipfs-cids-owners-contracts = { version = "0.0.1", path = "../contracts-bindings" }
tokio = { version = "1.25.0", features = [ "macros", "rt-multi-thread" ]  }

[dev-dependencies]
futures = "0.3.26"
mktemp = "0.5.0"
test-with = "*"
